--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
     </section>
         </div>
         <hr>
-  <footer>This is a <span class="footers">   FAKE  </span>Landing page desigend by <a href="https://www.linkedin.com/in/maryamsherzai9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin footers">Maryam Sherzai</a>
- in <a href="https://www.figma.com/design/8xIJg3zq2YEZQqN2yrcIwt/user-portfolio?node-id=0-1&t=K5kMlXEAwv5wC1U9-1" class="figma footers">Figma</a>
- and Coded by <a href="https://www.linkedin.com/in/iqbalsafia" class="my footers">Safia Iqbal</a> in <a href="https://github.com/SafiaIqbal/landing_shecodes.git" class="github footers">Git Hub</a> and hosted in <a href="https://charming-palmier-7c80e5.netlify.app/" class="netlify footers">Netlify</a>
+  <footer>This is a <span class="footers">   FAKE  </span>Landing page desigend by <a href="https://www.linkedin.com/in/maryamsherzai9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin footers" target="_blank">Maryam Sherzai</a>
+ in <a href="https://www.figma.com/design/8xIJg3zq2YEZQqN2yrcIwt/user-portfolio?node-id=0-1&t=K5kMlXEAwv5wC1U9-1" class="figma footers" target="_blank">Figma</a>
+ and Coded by <a href="https://www.linkedin.com/in/iqbalsafia" class="my footers" target="_blank">Safia Iqbal</a> in <a href="https://github.com/SafiaIqbal/landing_shecodes.git" class="github footers" target="_blank">Git Hub</a> and hosted in <a href="https://charming-palmier-7c80e5.netlify.app/" class="netlify footers" target="_blank">Netlify</a>
 </footer>
 </body>
 
